# cpp_starter

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
include/foo/: bar.hpp  foo.hpp
src/foo/: CMakeLists.txt  bar.cpp  foo.cpp
test/: CMakeLists.txt  test_foo.cpp
